so linkei, ta feio

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h5>Email</h5>
       <input type="text">
       </div>
-      <button>Reset</button>
+      <button><a  href="https://pedraocode.github.io/aprycot3/"></a>Reset</button>
     </div>
 
    
